<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="itp341.bhatia.shamit.a8.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:id="@+id/tipCalcBtn"
            android:text="@string/tipCalc" />

        <Button
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:id="@+id/unitConvBtn"
            android:text="@string/unitConv"
            android:layout_toEndOf="@id/tipCalcBtn"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/moneyExchBtn"
            android:text="@string/moneyExch"
            android:layout_toEndOf="@id/unitConvBtn"
            android:layout_alignParentEnd="true"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/unitConvBtn"
            android:id="@+id/fragment_container"></FrameLayout>

    </RelativeLayout>




</android.support.constraint.ConstraintLayout>
